cargo-features = ["edition"]

[package]
name = "storyforest_api_server"
version = "0.1.0"
authors = ["Colin Reeder <vpzomtrrfrt@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.3.15"
rocket_codegen = "0.3.15"
rocket_contrib = "0.3.15"
diesel = { version = "1.3.2", features = ["r2d2", "postgres"] }
serde_derive = "1.0.70"
serde = "1.0.70"
quick-error = "1.2.2"
